# bazel-cgorust

./: WORKSPACE
cgorust/: BUILD.bazel  main.go  person.h
person-rs/: BUILD.bazel
person-rs/src/: lib.rs
